Stabilized modal gutters to fix UI shift with scroll bar

--- a/ghostwriter/static/css/styles.css
+++ b/ghostwriter/static/css/styles.css
@@ -8,6 +8,7 @@
 
 html {
   overflow-y: scroll;
+  scrollbar-gutter: stable;
   transition: background-color 0.5s ease, color 0.5s ease;
 }
 
